<resources>
    <string name="app_name">MyTube</string>
    <string name="add_show">Add Show</string>
    <string name="release_date_lbl">Release Date:</string>
    <string name="seasons_lbl">Seasons:</string>
    <string name="release_date">Release Date</string>
    <string name="seasons">Seasons</string>
    <string name="tv_show">Tv Show</string>
    <string name="save">Save</string>
    <string name="dashboard_image">Dashboard Image</string>
    <string name="add_new_tv_show">Add New TV Shows</string>
    <string name="list_tv_shows">Show List of Added TV Shows</string>
    <string name="select_date">Select date</string>
    <string name="show_name_blank_err">Show Name cannot be empty</string>
    <string name="saving">Saving…</string>
</resources>