<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shows.DashboardFragment">

    <ImageView
        android:id="@+id/img_dash"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/dashboard_image"
        android:scaleType="centerCrop"
        android:src="@drawable/dashboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add_show"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/add_new_tv_show"
        app:layout_constraintEnd_toEndOf="@+id/img_dash"
        app:layout_constraintStart_toStartOf="@+id/img_dash"
        app:layout_constraintTop_toBottomOf="@+id/img_dash" />

    <Button
        android:id="@+id/btn_list_shows"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/list_tv_shows"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_show"
        app:layout_constraintStart_toStartOf="@+id/btn_add_show"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_show" />

</androidx.constraintlayout.widget.ConstraintLayout>