<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shows.AddShowFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_field_show_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:hint="@string/tv_show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text|textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_field_release_date"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_internal"
        android:hint="@string/release_date"
        app:endIconDrawable="@drawable/ic_outline_calendar_today_24"
        app:endIconMode="custom"
        app:endIconTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/txt_field_show_name"
        app:layout_constraintStart_toStartOf="@+id/txt_field_show_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_field_show_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:enabled="false"
            android:imeOptions="actionNext"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_field_seasons"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_internal"
        android:hint="@string/seasons"
        app:layout_constraintEnd_toEndOf="@+id/txt_field_show_name"
        app:layout_constraintStart_toStartOf="@+id/txt_field_show_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_field_release_date">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save_show"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/txt_field_show_name"
        app:layout_constraintStart_toStartOf="@+id/txt_field_show_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_field_seasons" />

</androidx.constraintlayout.widget.ConstraintLayout>